---
source: client-gen/src/generator.rs
expression: generator.generate(program).unwrap()
---
// Code generated by sails-client-gen from test. DO NOT EDIT.
#![automatically_derived]
#![allow(unused)]
use gstd::prelude::*;
use parity_scale_codec::{Decode, Encode};
use sails_sender::{Call, GStdSender};
pub trait Service {
    fn do_this(&mut self, p1: u32, p2: MyParam) -> Call<u16>;
    fn do_that(&mut self, p1: (u8, u32)) -> Call<u8>;
}

#[derive(Clone)]
pub struct Client<'a> {
    sender: &'a GStdSender,
}

impl<'a> Client<'a> {
    pub fn new(sender: &'a GStdSender) -> Self {
        Self { sender }
    }
}

impl<'a> Service for Client<'a> {
    fn do_this(&mut self, p1: u32, p2: MyParam) -> Call<u16> {
        Call::new("DoThis", (p1, p2))
    }
    fn do_that(&mut self, p1: (u8, u32)) -> Call<u8> {
        Call::new("DoThat", (p1))
    }
}
#[derive(PartialEq, Debug, Encode, Decode)]
pub struct MyParam {
    f1: u32,
    f2: Vec<String>,
    f3: Option<(u8, u32)>,
}
#[derive(PartialEq, Debug, Encode, Decode)]
pub enum MyParam2 {
    Variant1,
    Variant2(u32),
    Variant3((u32,)),
    Variant4((u8, u32)),
    Variant5 { f1: String, f2: Vec<u8> },
}

